<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/button_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:id="@+id/course_title_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/course_title" />

        <TextView
            android:id="@+id/course_start_date_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/course_start_date" />

        <TextView
            android:id="@+id/course_end_date_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/course_end_date" />

        <TextView
            android:id="@+id/course_status_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/course_status" />

        <!--<ScrollView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent">-->

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:orientation="vertical">-->

                <TextView
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/assessment_list_label"/>

                <ListView
                    android:id="@+id/assessment_listview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </ListView>

                <TextView
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/mentor_list_label"/>

                <ListView
                    android:id="@+id/mentors_listview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </ListView>

            <!--</LinearLayout>-->


        <!--</ScrollView>-->


    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <Button
            android:id="@+id/notes_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:text="Notes"/>

        <Button
            android:id="@+id/pictures_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:text="Picture"/>

    </LinearLayout>

    <!--<Button-->
        <!--android:id="@+id/notes_button"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="8dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:text="@string/notes"-->
        <!--app:layout_constraintBottom_toBottomOf="parent"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintStart_toStartOf="parent" />-->


</android.support.constraint.ConstraintLayout>
